[gd_scene load_steps=6 format=3 uid="uid://c85yituae8700"]

[ext_resource type="Script" path="res://Robot/Components/Wheel/Wheel.gd" id="1_rwgoc"]
[ext_resource type="PackedScene" uid="uid://w4vg6d5m6iu5" path="res://Robot/Components/Wheel/wheel.glb" id="2_31v4u"]
[ext_resource type="Script" path="res://Robot/Components/mesh_highlighter.gd" id="2_c0ii7"]
[ext_resource type="PackedScene" uid="uid://dq2gqwdley4gu" path="res://SideBar/Components/ComponentSettings/component_settings.tscn" id="4_d1o12"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5w4dv"]
height = 2.1
radius = 1.6

[node name="Wheel" type="JoltHingeJoint3D"]
motor_enabled = true
motor_target_velocity = 0.349066
node_a = NodePath("RigidBody3D")
script = ExtResource("1_rwgoc")
radius = 1.6
width = 2.1

[node name="RigidBody3D" type="RigidBody3D" parent="." groups=["component"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1.05)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_5w4dv")

[node name="wheel" parent="RigidBody3D" node_paths=PackedStringArray("parent_root") instance=ExtResource("2_31v4u")]
transform = Transform3D(2.1, 0, 0, 0, 3.2, 0, 0, 0, 3.2, 0, 0, 0)
script = ExtResource("2_c0ii7")
parent_root = NodePath("../..")

[node name="ComponentSettings" parent="." instance=ExtResource("4_d1o12")]
visible = false
settings_labels = Array[String](["Radius", "Width", "Max RPM", "Torque", "Powered"])
settings_types = Array[int]([0, 0, 0, 0, 1])
settings_default_vals = [1.6, 2.1, 200.0, 100.0, true]
settings_float_type = Array[int]([1, 1, 3, 4, 0])

[connection signal="check_box_val_changed" from="ComponentSettings" to="." method="_on_component_settings_check_box_val_changed"]
[connection signal="float_val_changed" from="ComponentSettings" to="." method="_on_component_settings_float_val_changed"]
